# bin.c

./: AGENTS.md  CMakeLists.txt  Makefile  README.md  test.sh
src/: bin.c
